# vectra-py

./: .gitignore  LICENSE  README.md  env  example.py  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
sample/: example.py
samples/: hello.txt  hello1.txt  hello2.txt  requirements.txt  simple_local_doc_index.py  simple_local_doc_result_query.py  simple_local_file_index.py  simple_local_index.py  test_filing_1.json
src/: item_selector.py  local_index.py
src/vectra_py/: __init__.py  all_MiniLM_L6_v2_tokenizer.py  custom_types.py  file_fetcher.py  gpt3_tokenizer.py  item_selector.py  local_document.py  local_document_index.py  local_document_result.py  local_index.py  openai_embeddings.py  oss_embeddings.py  text_splitter.py  vectra-cli.py  vectra-pipeline.py  web_fetcher.py
