[project]
name = "vectra_py"
version = "0.0.5"
authors = [
  { name="Brian Schleckser", email="brian.schleckser+vectrapy@gmail.com" },
]
description = "An in memory vector index project, simliar to Pinecone DB."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BMS-geodev/vectra-py"
"Bug Tracker" = "https://github.com/BMS-geodev/vectra-py/issues"